// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependent resource 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"data_source\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/data_source\\",
            \\"uniqueId\\": \\"data_source\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"resource\\": {
        \\"name\\": \\"foo\\",
        \\"depends_on\\": [
          \\"data.test_data_source.data_source\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"resource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`do not change capitalization of arbritary nested types 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"nested_type\\": {
          \\"Tag\\": \\"isDowncased\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`do not change capitalization of tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"tags\\": {
          \\"Tag\\": \\"isWorking\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`provider setter 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"1\\"
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"provider\\": \\"test\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`serialize list interpolation 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"names\\": \\"\${other_test_resource.othertest.names}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    },
    \\"other_test_resource\\": {
      \\"othertest\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/othertest\\",
            \\"uniqueId\\": \\"othertest\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with complex computed list 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"tests\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"resource\\": {
    \\"other_test_resource\\": {
      \\"othertest\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/othertest\\",
            \\"uniqueId\\": \\"othertest\\"
          }
        }
      }
    },
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"\${other_test_resource.othertest.complex_computed_list.0.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"tests/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with provider alias 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"1\\"
      },
      {
        \\"access_key\\": \\"123\\",
        \\"alias\\": \\"foo\\"
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test\\": {
        \\"name\\": \\"bar\\",
        \\"provider\\": \\"test.foo\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;
